RESOLVED FIXED292958
[WGSL] Argument buffer placeholders should use index instead of binding
https://bugs.webkit.org/show_bug.cgi?id=292958
Summary [WGSL] Argument buffer placeholders should use index instead of binding
Tadeu Zagallo
Reported 2025-05-13 14:33:03 PDT
...
Attachments
Tadeu Zagallo
Comment 1 2025-05-13 14:33:05 PDT
Tadeu Zagallo
Comment 2 2025-05-13 14:41:33 PDT
EWS
Comment 3 2025-05-19 02:13:47 PDT
Committed 295088@main (92f7ba66b1f9): <https://commits.webkit.org/295088@main> Reviewed commits have been landed. Closing PR #45335 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.