[WGSL] Argument buffer placeholders should use index instead of binding https://bugs.webkit.org/show_bug.cgi?id=292958 rdar://150923821

Reviewed by Mike Wyrzykowski.

When creating the placeholders in the argument buffers we use the entry's `binding`
for creating a unique identifier, but that can create a collision between the
placeholder for the bindgroup entry and its size.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::RewriteGlobalVariables::insertStructs):

Canonical link: https://commits.webkit.org/295088@main